--- a/halal/certification.html
+++ b/halal/certification.html
@@ -50,16 +50,13 @@
 			<div class="wrapper clearfix">
 				<div class="container container_right col_container clearfix">
 				<div class="hamburger_menu"><i class="fa fa-bars" aria-hidden="true"></i></div>
-					<ul class="nav clearfix">
+					<ul class="nav clearfix animated">
 						<li class="nav_item"><a class="nav_item_link" href="about.html">О компании</a></li>
 						<li class="nav_item dropdown">
 							<a class="nav_item_link" href="javascript:void(0)">Сертификация <i class="fa fa-caret-down" aria-hidden="true"></i></a>
 							  	<ul class="dropdown-content wide">
 								    <li class="dropdown-content_item"><a href="certification.html">Что такое сертификация «Халяль»</a></li>
 								    <li class="dropdown-content_item"><a href="certification_2.html">Процедура сертификации производства</a></li>
-								    <li class="dropdown-content_item"><a href="certification_2.html">Требования к сырью и составляющим веществам</a></li>
-								     <li class="dropdown-content_item"><a href="certification_2.html">Требования к условиям производства продукции</a></li>
-
 								</ul>
 						</li>
 						<li class="nav_item"><a class="nav_item_link" href="manufacturers.html">Клиенты</a></li>
@@ -67,8 +64,8 @@
 							<a class="nav_item_link" href="javascript:void(0)">Новости <i class="fa fa-caret-down" aria-hidden="true"></i></a>
 							  	<ul class="dropdown-content">
 								    <li class="dropdown-content_item"><a href="news_main.html">Об Исламе</a></li>
-								    <li class="dropdown-content_item"><a href="news_item.html">Наши новости</a></li>
-								    <li class="dropdown-content_item"><a href="news_item.html">Полезные статьи</a></li>
+								    <li class="dropdown-content_item"><a href="news_main.html">Наши новости</a></li>
+								    <li class="dropdown-content_item"><a href="news_main.html">Полезные статьи</a></li>
 								</ul>
 						</li>
 						
