--- a/halal/index.html
+++ b/halal/index.html
@@ -56,9 +56,6 @@
 							  	<ul class="dropdown-content wide">
 								    <li class="dropdown-content_item"><a href="certification.html">Что такое сертификация «Халяль»</a></li>
 								    <li class="dropdown-content_item"><a href="certification_2.html">Процедура сертификации производства</a></li>
-								    <li class="dropdown-content_item"><a href="certification_2.html">Требования к сырью и составляющим веществам</a></li>
-								     <li class="dropdown-content_item"><a href="certification_2.html">Требования к условиям производства продукции</a></li>
-
 								</ul>
 						</li>
 						<li class="nav_item"><a class="nav_item_link" href="manufacturers.html">Клиенты</a></li>
@@ -87,24 +84,24 @@
 <main>
 <div class="main">
 	<ul class="bxslider">
-	  <li><img src="img/Fruits,+veggies+banner2_79468387.jpg" style="width: 100%; height: auto;"></li>
-	  <li><img src="img/Fruits,+veggies+banner2_79468387.jpg" style="width: 100%; height: auto"></li>
-	  <li><img src="img/Fruits,+veggies+banner2_79468387.jpg" style="width: 100%; height: auto;"></li>
+	  <li><img src="img/Fruits,+veggies+banner2_79468387.jpg" style="width: 100%; height: auto;" alt=""></li>
+	  <li><img src="img/Fruits,+veggies+banner2_79468387.jpg" style="width: 100%; height: auto" alt=""></li>
+	  <li><img src="img/Fruits,+veggies+banner2_79468387.jpg" style="width: 100%; height: auto;" alt=""></li>
 	</ul>
 </div>
 <div class="partners">
 	<div class="wrapper">
 		<ul id="partners">
-		  <li><img src="img/partners1.png"></li>
-		  <li><img src="img/partners2.png"></li>
-		  <li><img src="img/partners3.png"></li>
-		  <li><img src="img/partners4.png"></li>
-		  <li><img src="img/partners5.png"></li>
-		  <li><img src="img/partners1.png"></li>
-		  <li><img src="img/partners2.png"></li>
-		  <li><img src="img/partners3.png"></li>
-		  <li><img src="img/partners4.png"></li>
-		  <li><img src="img/partners5.png"></li>
+		  <li><img src="img/partners1.png" alt=""></li>
+		  <li><img src="img/partners2.png" alt=""></li>
+		  <li><img src="img/partners3.png" alt=""></li>
+		  <li><img src="img/partners4.png" alt=""></li>
+		  <li><img src="img/partners5.png" alt=""></li>
+		  <li><img src="img/partners1.png" alt=""></li>
+		  <li><img src="img/partners2.png" alt="" ></li>
+		  <li><img src="img/partners3.png" alt="" ></li>
+		  <li><img src="img/partners4.png" alt=""></li>
+		  <li><img src="img/partners5.png" alt=""></li>
 		</ul>
 	</div>
 </div>
@@ -113,15 +110,15 @@
 		<h2 class="container_header">Наши преимущества</h2>
 		<div class="prerogatives_container clearfix">
 			<div class="prerogatives_item">
-				<img src="img/1.png">
+				<img src="img/1.png" alt="">
 				<div><p>У нас есть многолетний опыт  и высококвалифицированные  специалисты</p></div>
 			</div>
 			<div class="prerogatives_item">
-				<img src="img/2.png">
+				<img src="img/2.png" alt="">
 				<div><p>Мы проводим независимую  и объективную оценку  производства продукции</p></div>
 			</div>
 			<div class="prerogatives_item">
-				<img src="img/3.png">
+				<img src="img/3.png" alt="">
 				<div><p>Наша компания  гарантирует достоверность  нашего сертификата "Халяль" на международном уровне</p></div>
 			</div>
 		</div>
@@ -132,15 +129,15 @@
 		<h2 class="container_header">Наша деятельность</h2>
 		<ul class="clearfix">
 			<li class="activity_item">
-				<div class="activity_img"><img src="img/6.png"></div>
+				<div class="activity_img"><img src="img/6.png" alt=""></div>
 				<div class="activity_text"><p>У нас есть многолетний опыт  и высоко<br>квалифицированные  специалисты</p></div>
 			</li>
 			<li class="activity_item">
-				<div class="activity_img"><img src="img/5.png"></div>
+				<div class="activity_img"><img src="img/5.png" alt=""></div>
 				<div class="activity_text"><p>Мы проводим независимую  и объективную оценку  производства продукции</p></div>
 			</li>
 			<li class="activity_item">
-				<div class="activity_img"><img src="img/4.png"></div>
+				<div class="activity_img"><img src="img/4.png" alt=""></div>
 				<div class="activity_text"><p>Наша компания  гарантирует достоверность  нашего сертификата "Халяль" на международном уровне</p></div>
 			</li>
 		</ul>
@@ -160,7 +157,7 @@
 	<div class="wrapper">
 	<div class="column-2 clearfix">
 		<div class="footer_summary">
-			<img src="img/logo.png">
+			<img src="img/logo.png" alt="">
 			<div class="footer_item">
 				<h4 class="footer_header">Хаяль</h4>
 				<div class="footer_text">Это независимая украинская организация обладающая статусом международной организации в сфере сертификации соответствия производства продукции требованиям стандарта «Халяль»
@@ -185,7 +182,8 @@
 				<table cellpadding="5" style="margin: 0 auto;">
 					<tr>
 					04071, Украина, г. 
-					Киев, ул. Лукьяновская, 46</tr>
+					Киев, ул. Лукьяновская, 46
+					</tr>
 					<tr>
 						<th>Тел:</th>
 						<th>+38(044) 465-18-77</th>
