--- a/halal/contacts.html
+++ b/halal/contacts.html
@@ -102,7 +102,7 @@
 	</div>
 </div>
 <div class="contacts_container">
-<div class="bg_col-1"></div>
+<!-- <div class="bg_col-1"></div> -->
 	<div class="wrapper clearfix contacts_container_item">
 		<div class="col-1">
 			<div class="side_contact_container">
