--- a/halal/news_main.html
+++ b/halal/news_main.html
@@ -166,7 +166,7 @@
 			</div>
 			<div class="column-3">
 		<ul class="footer_nav">
-				<li class="footer_nav_item"><a class="footer_nav_item_link" href="">О компании</a></li>
+				<li class="footer_nav_item"><a class="footer_nav_item_link" href="about.html">О компании</a></li>
 				<li class="footer_nav_item"><a class="footer_nav_item_link" href="">Клиенты</a></li>
 				<li class="footer_nav_item"><a class="footer_nav_item_link" href="">Сертификация</a></li>
 				<li class="footer_nav_item"><a class="footer_nav_item_link" href="">Новости</a></li>
