--- a/halal/contacts.html
+++ b/halal/contacts.html
@@ -151,7 +151,7 @@
 	<div class="wrapper">
 	<div class="column-2 clearfix">
 		<div class="footer_summary">
-			<img src="img/logo.png">
+			<img src="img/logo.png" alt="">
 			<div class="footer_item">
 				<h4 class="footer_header">Хаяль</h4>
 				<div class="footer_text">Это независимая украинская организация обладающая статусом международной организации в сфере сертификации соответствия производства продукции требованиям стандарта «Халяль»
@@ -160,11 +160,11 @@
 			</div>
 			<div class="column-3">
 		<ul class="footer_nav">
-				<li class="footer_nav_item"><a class="footer_nav_item_link" href="">О компании</a></li>
-				<li class="footer_nav_item"><a class="footer_nav_item_link" href="">Клиенты</a></li>
-				<li class="footer_nav_item"><a class="footer_nav_item_link" href="">Сертификация</a></li>
-				<li class="footer_nav_item"><a class="footer_nav_item_link" href="">Новости</a></li>
-				<li class="footer_nav_item"><a class="footer_nav_item_link" href="">Контакты</a></li>
+				<li class="footer_nav_item"><a class="footer_nav_item_link" href="about.html">О компании</a></li>
+				<li class="footer_nav_item"><a class="footer_nav_item_link" href="client.html">Клиенты</a></li>
+				<li class="footer_nav_item"><a class="footer_nav_item_link" href="certification_2.html">Сертификация</a></li>
+				<li class="footer_nav_item"><a class="footer_nav_item_link" href="news_main.html">Новости</a></li>
+				<li class="footer_nav_item"><a class="footer_nav_item_link" href="contacts.html">Контакты</a></li>
 			</ul>
 	</div>
 			<div class="copyright clearfix">Создание и разработка сайта <a href="http://web-intellectus.com/">®Intellectus-studio 2016</a></div>
@@ -176,7 +176,8 @@
 				<table cellpadding="5" style="margin: 0 auto;">
 					<tr>
 					04071, Украина, г. 
-					Киев, ул. Лукьяновская, 46</tr>
+					Киев, ул. Лукьяновская, 46
+					</tr>
 					<tr>
 						<th>Тел:</th>
 						<th>+38(044) 465-18-77</th>
