--- a/halal/index.html
+++ b/halal/index.html
@@ -166,11 +166,11 @@
 			</div>
 			<div class="column-3">
 		<ul class="footer_nav">
-				<li class="footer_nav_item"><a class="footer_nav_item_link" href="">О компании</a></li>
-				<li class="footer_nav_item"><a class="footer_nav_item_link" href="">Клиенты</a></li>
-				<li class="footer_nav_item"><a class="footer_nav_item_link" href="">Сертификация</a></li>
-				<li class="footer_nav_item"><a class="footer_nav_item_link" href="">Новости</a></li>
-				<li class="footer_nav_item"><a class="footer_nav_item_link" href="">Контакты</a></li>
+				<li class="footer_nav_item"><a class="footer_nav_item_link" href="about.html">О компании</a></li>
+				<li class="footer_nav_item"><a class="footer_nav_item_link" href="client.html">Клиенты</a></li>
+				<li class="footer_nav_item"><a class="footer_nav_item_link" href="certification_2.html">Сертификация</a></li>
+				<li class="footer_nav_item"><a class="footer_nav_item_link" href="news_main.html">Новости</a></li>
+				<li class="footer_nav_item"><a class="footer_nav_item_link" href="contacts.html">Контакты</a></li>
 			</ul>
 	</div>
 			<div class="copyright clearfix">Создание и разработка сайта <a href="http://web-intellectus.com/">®Intellectus-studio 2016</a></div>
