--- a/halal/certification_3.html
+++ b/halal/certification_3.html
@@ -10,6 +10,7 @@
 <!-- Add fancyBox -->
 <link rel="stylesheet" href="fancybox/source/jquery.fancybox.css?v=2.1.5" type="text/css" media="screen" />
 
+<!-- Optionally add helpers - button, thumbnail and/or media -->
 <link rel="stylesheet" href="fancybox/source/helpers/jquery.fancybox-buttons.css?v=1.0.5" type="text/css" media="screen" />
 
 <link rel="stylesheet" href="fancybox/source/helpers/jquery.fancybox-thumbs.css?v=1.0.7" type="text/css" media="screen" />
@@ -83,78 +84,63 @@
 		</div>			
 	</div>
 </header>
-<main>
-<div class="main">
-	<ul class="bxslider">
-	  <li><img src="img/Fruits,+veggies+banner2_79468387.jpg" style="width: 100%; height: auto;" alt=""></li>
-	  <li><img src="img/Fruits,+veggies+banner2_79468387.jpg" style="width: 100%; height: auto" alt=""></li>
-	  <li><img src="img/Fruits,+veggies+banner2_79468387.jpg" style="width: 100%; height: auto;" alt=""></li>
-	</ul>
-</div>
-<div class="partners">
-	<div class="wrapper">
-		<ul id="partners">
-		  <li><img src="img/partners1.png" alt=""></li>
-		  <li><img src="img/partners2.png" alt=""></li>
-		  <li><img src="img/partners3.png" alt=""></li>
-		  <li><img src="img/partners4.png" alt=""></li>
-		  <li><img src="img/partners5.png" alt=""></li>
-		  <li><img src="img/partners1.png" alt=""></li>
-		  <li><img src="img/partners2.png" alt="" ></li>
-		  <li><img src="img/partners3.png" alt="" ></li>
-		  <li><img src="img/partners4.png" alt=""></li>
-		  <li><img src="img/partners5.png" alt=""></li>
-		</ul>
+<div class="header_block clearfix">
+	<div class="wrapper clearfix">
+		<div class="breadcrumbs">
+			<ul class="breadcrumbs_container clearfix">
+				<li class="breadcrumbs_item"><a class="breadcrumbs_link" href="">Главная <i class="fa fa-angle-right" aria-hidden="true"></i> </a></li>
+				<li class="breadcrumbs_item"><a class="breadcrumbs_link active" href="">Сертификация <i class="fa fa-angle-right" aria-hidden="true"></i></a></li>
+			</ul>
+			<h2 class="section_header">Сертификация</h2>
+		</div>
 	</div>
 </div>
-<div class="prerogatives">
-	<div class="wrapper bg" style="position: relative;">
-		<h2 class="container_header">Наши преимущества</h2>
-		<div class="prerogatives_container clearfix">
-			<div class="prerogatives_item">
-				<img src="img/1.png" alt="">
-				<div><p>У нас есть многолетний опыт  и высококвалифицированные  специалисты</p></div>
+<div class="main_certification">
+	<div class="wrapper certif_3">
+		<div style="text-align: center; padding-top: 30px;">
+		<img style="width: 100%;" src="img/certif_3.png">
+		<h3 class="inside_header">Требования к условиям производства продукции «Халяль»</h3>
+		</div>
+		<div class="divider">
+			<svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 1200 50" style="enable-background:new 0 0 1200 50;" xml:space="preserve">
+<style type="text/css">
+	.st0{fill:none;stroke:#243B00;stroke-width:1.4734;}
+</style>
+<path class="st0" d="M0,20.3c6.9,5.9,15.8,9.5,25.6,9.5c9.5,0,18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9
+	s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9
+	c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9
+	s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9
+	c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9
+	s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9
+	c6.8,5.6,15.5,9,25,9c9.5,0,18.2-3.4,25-9c6.8,5.6,15.5,9,25,9c9.5,0,18.2-3.4,25-9c6.8,5.6,15.5,9,25,9c9.5,0,18.2-3.4,25-9
+	c6.8,5.6,15.5,9,25,9c9.8,0,18.7-3.6,25.6-9.5"/>
+</svg>
+		</div>
+		<div class="certif_wrapper" style="background-image: url(img/bg_logo.png);">
+		<div class="certif_block">
+			<h5 class="certif_block_head certif3_block_head">В процессе производства продуктов питания «халяль» дозволено использовать все разрешенное сырьё и составляющие вещества, за исключением:</h5>
+			<div class="certif_block_text">
+			<p>Запрещенных животных, их мяса и любых других частей (жир, кости, кожа, шерсть и др.);</p>
+<p>Мертвечину (животных, которые умерли естественным образом либо погибли в результате воздействия сторонних факторов — электрического тока, удушения, отравления, падения, утопления или по другой причине гибели);</p>
+<p>Дозволенных животных, которые были умерщвлены с нарушением Законов Ислама;</p>
+<p>Железы внутренней секреции (эпифиз, щитовидная и паращитовидная железы, поджелудочная железа, надпочечники), желчный и мочевой пузырь, гениталий животных, в том числе зарезанных в соответствии с Законами Ислама;</p>
+<p>Кровь, вытекшая из животных в результате резания;</p>
+<p>Сырье, содержащее спирт либо наркотические и опьяняющие вещества;</p>
+<p>Дозволенное сырье, которое соприкасалось с запрещенными продуктами или нечистотами;</p>
+<p>Вспомогательное сырье и ферменты (добавки, наполнители, специи, желатиновые загустители), полученное из органов животных.</p>
 			</div>
-			<div class="prerogatives_item">
-				<img src="img/2.png" alt="">
-				<div><p>Мы проводим независимую  и объективную оценку  производства продукции</p></div>
-			</div>
-			<div class="prerogatives_item">
-				<img src="img/3.png" alt="">
-				<div><p>Наша компания  гарантирует достоверность  нашего сертификата "Халяль" на международном уровне</p></div>
+		</div>
+		<div class="certif_block">
+			<h5 class="certif_block_head certif3_block_head">Все дозволенное сырье и составляющие вещества, применяемые в производстве 
+продуктов питания «халяль», должны иметь:</h5>
+			<div class="certif_block_text">
+			<p>Сопроводительные документы, предусмотренные действующим законодательством, позволяющим идентифицировать поставщика сырья;</p>
+<p>Документальное подтверждение надлежащего качества и безопасности пищевых продуктов (сертификат соответствия; заключение государственной санитарно-гигиенической экспертизы).</p>
 			</div>
 		</div>
 	</div>
 </div>
-<div class="activity">
-	<div class="wrapper">
-		<h2 class="container_header">Наша деятельность</h2>
-		<ul class="clearfix">
-			<li class="activity_item">
-				<div class="activity_img"><img src="img/6.png" alt=""></div>
-				<div class="activity_text"><p>У нас есть многолетний опыт  и высоко<br>квалифицированные  специалисты</p></div>
-			</li>
-			<li class="activity_item">
-				<div class="activity_img"><img src="img/5.png" alt=""></div>
-				<div class="activity_text"><p>Мы проводим независимую  и объективную оценку  производства продукции</p></div>
-			</li>
-			<li class="activity_item">
-				<div class="activity_img"><img src="img/4.png" alt=""></div>
-				<div class="activity_text"><p>Наша компания  гарантирует достоверность  нашего сертификата "Халяль" на международном уровне</p></div>
-			</li>
-		</ul>
-	</div>
-</div>
-<div class="slogan">
-	<div class="wrapper">
-		<h2 class="slogan_header">«ЦЕНТР СЕРТИФИКАЦИИ «ХАЛЯЛЬ»</h2>
-		<div class="slogan_text">это независимая украинская организация, 
-обладающая статусом международной организации 
-в сфере сертификации соответствия производства 
-продукции требованиям стандарта «Халяль».</div>
-	</div>
-</div>
-</main>
 <footer class="clearfix">
 	<div class="wrapper">
 	<div class="column-2 clearfix">
@@ -209,7 +195,6 @@
 	</div>
 	</div>
 </footer>
-<a href="#" class="scroll_to_top icon-up show" title="Scroll to top"><i class="fa fa-angle-up" aria-hidden="true"></i></a>
 
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/jquery.validate.min.js"></script>
