--- a/halal/certification_2.html
+++ b/halal/certification_2.html
@@ -57,6 +57,8 @@
 							  	<ul class="dropdown-content wide">
 								    <li class="dropdown-content_item"><a href="certification.html">Что такое сертификация «Халяль»</a></li>
 								    <li class="dropdown-content_item"><a href="certification_2.html">Процедура сертификации производства</a></li>
+								     <li class="dropdown-content_item"><a href="certification_3.html">Требования к сырью и составляющим веществам</a></li>
+								    <li class="dropdown-content_item"><a href="certification_3.html">Требования к условиям производства продукции</a></li>
 								</ul>
 						</li>
 						<li class="nav_item"><a class="nav_item_link" href="manufacturers.html">Клиенты</a></li>
