--- a/halal/certification_2.html
+++ b/halal/certification_2.html
@@ -99,11 +99,26 @@
 	<div class="wrapper">
 		<div style="text-align: center; padding-top: 30px;">
 		<img style="width: 100%;" src="img/certif_img.png">
-
+		<h3 class="inside_header">Процедура сертификации производства</h3>
+		</div>
+		<div class="divider">
+			<svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+	 viewBox="0 0 1200 50" style="enable-background:new 0 0 1200 50;" xml:space="preserve">
+<style type="text/css">
+	.st0{fill:none;stroke:#243B00;stroke-width:1.4734;}
+</style>
+<path class="st0" d="M0,20.3c6.9,5.9,15.8,9.5,25.6,9.5c9.5,0,18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9
+	s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9
+	c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9
+	s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9
+	c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9
+	s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9c6.8,5.6,15.5,9,25,9s18.2-3.4,25-9
+	c6.8,5.6,15.5,9,25,9c9.5,0,18.2-3.4,25-9c6.8,5.6,15.5,9,25,9c9.5,0,18.2-3.4,25-9c6.8,5.6,15.5,9,25,9c9.5,0,18.2-3.4,25-9
+	c6.8,5.6,15.5,9,25,9c9.8,0,18.7-3.6,25.6-9.5"/>
+</svg>
 		</div>
 		</div>
 		<div class="certif_wrapper" style="background-image: url(img/bg_logo.png);">
-		<h3 class="inside_header">Процедура сертификации производства</h3>
 		<ol class="certificaion_infografic">
 			<li class="certificaion_infografic_item">Заполнение и подача Заказчиком Заявки (в установленной форме) на проведение добровольной сертификации соответствия производства продукции требованиям стандарта «Халяль».</li>
 			<li class="certificaion_infografic_item">Определение возможности проведения сертификации производства заявленной продукции Заказчика.</li>
