--- a/halal/client.html
+++ b/halal/client.html
@@ -55,10 +55,10 @@
 						<li class="nav_item dropdown">
 							<a class="nav_item_link" href="javascript:void(0)">Сертификация <i class="fa fa-caret-down" aria-hidden="true"></i></a>
 							  	<ul class="dropdown-content wide">
-								    <li class="dropdown-content_item"><a href="certification.html">Что такое сертификация «Халяль»</a></li>
+								    <li class="dropdown-content_item"><a href="">Что такое сертификация «Халяль»</a></li>
 								    <li class="dropdown-content_item"><a href="certification_2.html">Процедура сертификации производства</a></li>
 								     <li class="dropdown-content_item"><a href="certification_3.html">Требования к сырью и составляющим веществам</a></li>
-								    <li class="dropdown-content_item"><a href="certification_3.html">Требования к условиям производства продукции</a></li>
+								    <li class="dropdown-content_item"><a href="certification.html">Требования к условиям производства продукции</a></li>
 								</ul>
 						</li>
 						<li class="nav_item"><a class="nav_item_link" href="manufacturers.html">Клиенты</a></li>
@@ -89,7 +89,7 @@
 		<div class="breadcrumbs">
 			<ul class="breadcrumbs_container clearfix">
 				<li class="breadcrumbs_item"><a class="breadcrumbs_link" href="">Главная <i class="fa fa-angle-right" aria-hidden="true"></i> </a></li>
-				<li class="breadcrumbs_item"><a class="breadcrumbs_link active" href="">Клиенты <i class="fa fa-angle-right" aria-hidden="true"></i></a></li>
+				<li class="breadcrumbs_item"><a class="breadcrumbs_link" href="">Клиенты <i class="fa fa-angle-right" aria-hidden="true"></i></a></li>
 				<li class="breadcrumbs_item"><a class="breadcrumbs_link active" href="">Кернел <i class="fa fa-angle-right" aria-hidden="true"></i></a></li>
 			</ul>
 			<h2 class="section_header">Клиенты</h2>
@@ -133,8 +133,8 @@
 		<div class="certif_block client_item">
 		<h3>Компания ведет свою деятельность в шести бизнес сегментах</h3>
 			<div class="certif_block_text about_us_block_text">
-				<div>Подсолнечное масло. Компания является крупнейшим в Украине производителем и экспортером подсолнечного масла, процесс изготовления которого включает в себя приемку семян подсолнечника и их переработку в сырое подсолнечное масло и шрот. Нерафинированное подсолнечное масло и шрот реализуются на международном рынке.<div>
-				<div>Бутилированное масло. Компания является крупнейшим производителем и поставщиком бутилированного подсолнечного масла на внутреннем рынке. Деятельность в данном сегменте – это рафинирование сырого подсолнечного масла и его фасовка. Основной рынок продаж – Украина, где масло реализуется, в основном, под торговыми марками Компании напрямую крупным розничным сетям либо через региональные дистрибьюторы.</div>
+				<div><span>Подсолнечное масло.</span> Компания является крупнейшим в Украине производителем и экспортером подсолнечного масла, процесс изготовления которого включает в себя приемку семян подсолнечника и их переработку в сырое подсолнечное масло и шрот. Нерафинированное подсолнечное масло и шрот реализуются на международном рынке.<div>
+				<div><span>Бутилированное масло.</span> Компания является крупнейшим производителем и поставщиком бутилированного подсолнечного масла на внутреннем рынке. Деятельность в данном сегменте – это рафинирование сырого подсолнечного масла и его фасовка. Основной рынок продаж – Украина, где масло реализуется, в основном, под торговыми марками Компании напрямую крупным розничным сетям либо через региональные дистрибьюторы.</div>
 			</div>
 	</div>
 	</div>
