--- a/halal/certification_2.html
+++ b/halal/certification_2.html
@@ -55,10 +55,10 @@
 						<li class="nav_item dropdown">
 							<a class="nav_item_link" href="javascript:void(0)">Сертификация <i class="fa fa-caret-down" aria-hidden="true"></i></a>
 							  	<ul class="dropdown-content wide">
-								    <li class="dropdown-content_item"><a href="certification.html">Что такое сертификация «Халяль»</a></li>
+								    <li class="dropdown-content_item"><a href="">Что такое сертификация «Халяль»</a></li>
 								    <li class="dropdown-content_item"><a href="certification_2.html">Процедура сертификации производства</a></li>
 								     <li class="dropdown-content_item"><a href="certification_3.html">Требования к сырью и составляющим веществам</a></li>
-								    <li class="dropdown-content_item"><a href="certification_3.html">Требования к условиям производства продукции</a></li>
+								    <li class="dropdown-content_item"><a href="certification.html">Требования к условиям производства продукции</a></li>
 								</ul>
 						</li>
 						<li class="nav_item"><a class="nav_item_link" href="manufacturers.html">Клиенты</a></li>
