--- a/halal/certification_3.html
+++ b/halal/certification_3.html
@@ -55,10 +55,10 @@
 						<li class="nav_item dropdown">
 							<a class="nav_item_link" href="javascript:void(0)">Сертификация <i class="fa fa-caret-down" aria-hidden="true"></i></a>
 							  	<ul class="dropdown-content wide">
-								    <li class="dropdown-content_item"><a href="certification.html">Что такое сертификация «Халяль»</a></li>
+								    <li class="dropdown-content_item"><a href="">Что такое сертификация «Халяль»</a></li>
 								    <li class="dropdown-content_item"><a href="certification_2.html">Процедура сертификации производства</a></li>
 								     <li class="dropdown-content_item"><a href="certification_3.html">Требования к сырью и составляющим веществам</a></li>
-								    <li class="dropdown-content_item"><a href="certification_3.html">Требования к условиям производства продукции</a></li>
+								    <li class="dropdown-content_item"><a href="certification.html">Требования к условиям производства продукции</a></li>
 								</ul>
 						</li>
 						<li class="nav_item"><a class="nav_item_link" href="manufacturers.html">Клиенты</a></li>
@@ -99,7 +99,7 @@
 	<div class="wrapper certif_3">
 		<div style="text-align: center; padding-top: 30px;">
 		<img style="width: 100%;" src="img/certif_3.png">
-		<h3 class="inside_header">Требования к условиям производства продукции «Халяль»</h3>
+		<h3 class="inside_header">Требования к сырью и составляющим веществам</h3>
 		</div>
 		<div class="divider">
 			<svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
