--- a/halal/about.html
+++ b/halal/about.html
@@ -89,9 +89,9 @@
 		<div class="breadcrumbs">
 			<ul class="breadcrumbs_container clearfix">
 				<li class="breadcrumbs_item"><a class="breadcrumbs_link" href="">Главная <i class="fa fa-angle-right" aria-hidden="true"></i> </a></li>
-				<li class="breadcrumbs_item"><a class="breadcrumbs_link active" href="">О нас <i class="fa fa-angle-right" aria-hidden="true"></i></a></li>
+				<li class="breadcrumbs_item"><a class="breadcrumbs_link active" href="">О компании <i class="fa fa-angle-right" aria-hidden="true"></i></a></li>
 			</ul>
-			<h2 class="section_header">О НАС</h2>
+			<h2 class="section_header">О компании</h2>
 		</div>
 	</div>
 </div>
@@ -100,12 +100,12 @@
 		<div class="main_img_wrapper" style="text-align: center; padding-top: 30px;">
 		<img style="width: 100%;" src="img/about_us.png">
 		<div class="img_text certif_wrapper">
-			<h2>О нас</h2>
+			<h2>О компании</h2>
 		</div>
 		</div>
 		<div class="certif_wrapper">
 			<div class="about_post_head">«Центр сертификации «Халяль» - это независимая украинская организация, обладающая статусом международного органа в сфере сертификации соответствия производства продукции требованиям Законов Ислама (Шариату).</div>
-		<div class="divider">
+		<!-- <div class="divider">
 			<svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 1200 50" style="enable-background:new 0 0 1200 50;" xml:space="preserve">
 <style type="text/css">
@@ -120,7 +120,7 @@
 	c6.8,5.6,15.5,9,25,9c9.5,0,18.2-3.4,25-9c6.8,5.6,15.5,9,25,9c9.5,0,18.2-3.4,25-9c6.8,5.6,15.5,9,25,9c9.5,0,18.2-3.4,25-9
 	c6.8,5.6,15.5,9,25,9c9.8,0,18.7-3.6,25.6-9.5"/>
 </svg>
-		</div>
+		</div> -->
 	<div class="certif_wrapper">
 		<div class="certif_block">
 			<div class="certif_block_text about_us_block_text">
