--- a/halal/certification.html
+++ b/halal/certification.html
@@ -101,7 +101,7 @@
 		<img style="width: 100%;" src="img/cert_banner.png">
 		<h3 class="inside_header">Требования к условиям производства продукции «Халяль»</h3>
 		</div>
-		<div class="divider">
+		<!-- <div class="divider">
 			<svg version="1.1" id="Слой_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 viewBox="0 0 1200 50" style="enable-background:new 0 0 1200 50;" xml:space="preserve">
 <style type="text/css">
@@ -116,7 +116,7 @@
 	c6.8,5.6,15.5,9,25,9c9.5,0,18.2-3.4,25-9c6.8,5.6,15.5,9,25,9c9.5,0,18.2-3.4,25-9c6.8,5.6,15.5,9,25,9c9.5,0,18.2-3.4,25-9
 	c6.8,5.6,15.5,9,25,9c9.8,0,18.7-3.6,25.6-9.5"/>
 </svg>
-		</div>
+		</div> -->
 		<div class="certif_wrapper" style="background-image: url(img/bg_logo.png);">
 		<div class="certif_block">
 			<h5 class="certif_block_head">Требования к персоналу</h5>
