--- a/halal/index.html
+++ b/halal/index.html
@@ -20,6 +20,8 @@
 <link rel="stylesheet" type="text/css" href="css/animate.css">
 <link rel="stylesheet" type="text/css" href="css/style.css">
 <link rel="icon" type="image/png" href="img/logo_marker.png">
+<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+<link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
 </head>
 <body>
 <header class="fixed_header">
@@ -113,15 +115,15 @@
 		<div class="prerogatives_container clearfix">
 			<div class="prerogatives_item">
 				<img src="img/1.png" alt="">
-				<div><p>У нас есть многолетний опыт  и высококвалифицированные  специалисты</p></div>
+				<div><p class="source">У нас есть многолетний опыт  и высококвалифицированные  специалисты</p></div>
 			</div>
 			<div class="prerogatives_item">
 				<img src="img/2.png" alt="">
-				<div><p>Мы проводим независимую  и объективную оценку  производства продукции</p></div>
+				<div><p style="font-family: Arial, sans-serif;">Мы проводим независимую  и объективную оценку  производства продукции</p></div>
 			</div>
 			<div class="prerogatives_item">
 				<img src="img/3.png" alt="">
-				<div><p>Наша компания  гарантирует достоверность  нашего сертификата "Халяль" на международном уровне</p></div>
+				<div><p class="courier">Наша компания  гарантирует достоверность  нашего сертификата "Халяль" на международном уровне</p></div>
 			</div>
 		</div>
 	</div>
