--- a/halal/index.html
+++ b/halal/index.html
@@ -115,15 +115,15 @@
 		<div class="prerogatives_container clearfix">
 			<div class="prerogatives_item">
 				<img src="img/1.png" alt="">
-				<div><p class="source">У нас есть многолетний опыт  и высококвалифицированные  специалисты</p></div>
+				<div><p>У нас есть многолетний опыт  и высококвалифицированные  специалисты</p></div>
 			</div>
 			<div class="prerogatives_item">
 				<img src="img/2.png" alt="">
-				<div><p style="font-family: Arial, sans-serif;">Мы проводим независимую  и объективную оценку  производства продукции</p></div>
+				<div><p>Мы проводим независимую  и объективную оценку  производства продукции</p></div>
 			</div>
 			<div class="prerogatives_item">
 				<img src="img/3.png" alt="">
-				<div><p class="courier">Наша компания  гарантирует достоверность  нашего сертификата "Халяль" на международном уровне</p></div>
+				<div><p >Наша компания  гарантирует достоверность  нашего сертификата "Халяль" на международном уровне</p></div>
 			</div>
 		</div>
 	</div>
