--- a/kancmatket_html/card.html
+++ b/kancmatket_html/card.html
@@ -219,7 +219,7 @@
         <div class="total">
           Итого: <span class="total_price">400</span><span class="currency">грн</span>
         </div>
-        <a class="product_buy_btn product_buy_btn_card" href="">
+        <a class="product_buy_btn product_buy_btn_card" href="backet.html">
             <i class="fa fa-shopping-cart" aria-hidden="true"></i><br>
             <span>Купить</span>
         </a>
